--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="match">Coincidencias</div>
         </div>
     </section>
-    <script src="Js/index.js"></script>
+    <script src="Js/index2.js"></script>
 </body>
 
 </html>
